// https://github.com/gogo/protobuf
// protoc --gofast_out=. *.proto
syntax = 'proto3';

package model;

// enum CompanyType {
//   Private = 17;
//   Public = 18;
//   NonProfit = 19;
// };

message File {
   string id = 1;
   string title = 2;
   string path = 3;
   string album_id = 4;
   string artist_id = 5;
   uint32 length = 6;
   map<string, string> meta = 7;
   // string email = 3;
   // string password = 4;
   // bytes pub_key = 5;
   // bytes priv_key = 6;   
  // repeated Employee Employees = 2;
  // required CompanyType Type = 3;
  // optional group Address = 4 {
  //   required string Country = 5;
  //   required string City = 6;
  //   optional string Street = 7;
  // }
}


// message Employee {
//   required string Name = 1;
//   optional string SSN = 2;
// }